--- a/.env
+++ b/.env
@@ -1,2 +1,13 @@
+# Framework
+# ---------
+YII_DEBUG   = true
+YII_ENV     = dev
 
+# Databases
+# ---------
+DB_DSN           = mysql:host=127.0.0.1;port=3306;dbname=test
+DB_USERNAME      = root
+DB_PASSWORD      = root
+DB_CHARSET       = utf8
+DB_TABLE_PREFIX  =
 
