--- a/.env
+++ b/.env
@@ -6,8 +6,8 @@ YII_ENV     = dev
 # Databases
 # ---------
 DB_DSN           = mysql:host=127.0.0.1;port=3306;dbname=test
-DB_USERNAME      = root
-DB_PASSWORD      = root
+DB_USERNAME      = admin
+DB_PASSWORD      = Zyh110110
 DB_CHARSET       = utf8
 DB_TABLE_PREFIX  =
 
