--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,7 @@
         "kucha/ueditor": "*",
         "2amigos/qrcode-library": "^1.1",
         "yiisoft/yii2-httpclient": "^2.0",
-        "voskobovich/yii2-many-many-behavior": "^3.0",
+        "voskobovich/yii2-many-many-behavior": "^3.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
