--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,9 @@
         "kucha/ueditor": "*",
         "2amigos/qrcode-library": "^1.1",
         "yiisoft/yii2-httpclient": "^2.0",
+        "yiisoft/yii2-debug": "~2.0.0",
+        "yiisoft/yii2-gii": "~2.0.0",
+        "yiisoft/yii2-faker": "~2.0.0",
         "voskobovich/yii2-many-many-behavior": "^3.0"
     },
     "require-dev": {
