--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "yiisoft/yii2-bootstrap": "~2.0.0",
         "yiisoft/yii2-swiftmailer": "~2.0.0",
         "deployer/deployer": "^6.2",
-        "yiisoft/yii2-elasticsearch": "^2.0"
+        "yiisoft/yii2-elasticsearch": "^2.0",
+        "vlucas/phpdotenv": "^2.5"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
