--- a/.env
+++ b/.env
@@ -6,8 +6,8 @@ YII_ENV     = dev
 # Databases
 # ---------
 DB_DSN           = mysql:host=localhost;port=3306;dbname=test
-DB_USERNAME      = admin
-DB_PASSWORD      = Zyh110110
+DB_USERNAME      = root
+DB_PASSWORD      = root
 DB_TABLE_PREFIX  = 
 
 
