--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,9 @@
         "yiisoft/yii2-swiftmailer": "~2.0.0",
         "deployer/deployer": "^6.2",
         "yiisoft/yii2-elasticsearch": "^2.0",
-        "vlucas/phpdotenv": "^2.5"
+        "vlucas/phpdotenv": "^2.5",
+        "yiisoft/yii2-queue": "^2.1",
+        "yiisoft/yii2-redis": "^2.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
